--- a/zentimer/src/main/AndroidManifest.xml
+++ b/zentimer/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         <activity
             android:name="com.choochootrain.zentimer.TimerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
